@@ -23,6 +23,7 @@ gae-wiki 1.1
 - Added an MP3 player.
 - Fixed the Universal Edit Button.
 - Page name is now an editable property.
+- Added a /w/login page to use when the template is screwed.
 
 
 gae-wiki 1.0 (20110514)
